<resources>
    <string name="app_name">Historia Pojazdu</string>

    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>

    <string name="title_section_find_vehicle">Znajdź pojazd</string>
    <string name="title_section_history">Historia wyszukań</string>
    <string name="title_section_options">Opcje</string>
    <string name="title_section_rate">Oceń nas</string>
    <string name="title_section_about">O programie</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="input_plate">Numer rejestracyjny</string>
    <string name="input_vin">Numer VIN</string>
    <string name="input_registration_date">Data pierwszej rejestracji</string>
    <string name="post_search_form">Sprawdź pojazd</string>

    <string name="vehicle_info">Dane pojazdu</string>
    <string name="timeline">Oś czasu</string>

    <string name="producent_label">Producent</string>
    <string name="model_label">Model</string>
    <string name="year_label">Rok produkcji</string>
    <string name="vin_label">Numer VIN</string>
    <string name="first_registration_label">Pierwsza rejestracja</string>
    <string name="engine_capacity_label">Pojemność silnika</string>
    <string name="fuel_type_label">Paliwo</string>
    <string name="mileage_label">Przebieg</string>
    <string name="insurance_label">Ubezpieczenie</string>
    <string name="registration_status_label">Status rejestracji</string>
    <string name="technical_examination_label">Badania techniczne</string>
    <string name="vehicle_stolen_status_label">Pojazd kradziony</string>
    <string name="vehicle_class_label">Rodzaj</string>
    <string name="vehicle_type_label">Typ</string>

    <string name="yes">tak</string>
    <string name="no">nie</string>
    <string name="no_data">brak danych</string>

    <string name="search_in_progress">Szukam pojazdu</string>

    <!-- CarType enum values -->
    <string name="car_type_unknown">Nieznany</string>
    <string name="car_type_car">Samochód</string>
    <string name="car_type_special_car">Samochód specjalny</string>
    <string name="car_type_other_car">Samochód inny</string>
    <string name="car_type_motorcycle">Motocykl</string>
    <string name="car_type_moped">Motorower</string>
    <string name="car_type_bus">Autobus</string>
    <string name="car_type_tractor">Traktor</string>
    <string name="car_type_light_trailer">Lekka przyczepa</string>
    <string name="car_type_light_truck">Lekka ciężarówka</string>

    <!-- EventType enum values -->
    <string name="timeline_change_owner">Zmiana właściciela</string>
    <string name="timeline_deregistration">Wyrejestrowanie pojazdu</string>
    <string name="timeline_inspection">Badanie techniczne</string>
    <string name="timeline_production">Produkcja pojazdu</string>
    <string name="timeline_registration">Zarejestrowanie pojazdu</string>
    <string name="timeline_changed_registration_location">Zmiana miejsca rejestracji</string>
    <string name="timeline_co_owner">Dodanie współwłaściciela</string>
    <string name="timeline_holder">Dodanie posiadacza</string>
    <string name="timeline_stolen">Zgłoszenie kradzieży</string>
    <string name="unknown">Nieznany</string>

    <!-- CarKind enum values -->
    <string name="car_kind_convertible">kabriolet</string>
    <string name="car_kind_coupe">coupe</string>
    <string name="car_kind_estate">kombi</string>
    <string name="car_kind_hatchback">hatchback</string>
    <string name="car_kind_hearse">karawan</string>
    <string name="car_kind_limousine">limuzyna</string>
    <string name="car_kind_other">inny</string>
    <string name="car_kind_sedan">sedan</string>
    <string name="car_kind_van">van</string>
    <string name="car_kind_standard">osobowy</string>
    <string name="car_kind_other_not_camping">inna z wyjątkiem kempingowych</string>
    <string name="car_kind_wagon">furgon</string>
    <string name="car_kind_wheeled">kołowy</string>
    <string name="car_kind_cruiser">cruiser</string>
    <string name="car_kind_off_road">off road</string>
    <string name="car_kind_sport">sportowy</string>
    <string name="car_kind_sport_touring">sportowo-turystyczny</string>
    <string name="car_kind_touring">turystyczny</string>
    <string name="car_kind_city">miejski</string>
    <string name="car_kind_quad">quad</string>
    <string name="car_kind_trailer">przyczepa</string>
    <string name="car_kind_load_capacity_of_8_tons">o ładowności 8t</string>
    <string name="car_kind_trolley">wywrotka</string>
    <string name="car_kind_unknown">nieznany</string>
    <string name="plate_label_semicolon">Nr. rejestracyjny:</string>
    <string name="vin_label_semicolon">VIN:</string>
    <string name="first_reg_date_label_semicolon">Data pierwszej rejestracji:</string>
    <string name="about_first_paragraph">Aplikacja prezentuje treści darmowo dostępne w sieci Internet. Developerzy nie roszczą sobie żadnych praw do treści prezentowanych w aplikacji.</string>
    <string name="about_second_paragraph">Dane pochodzą z Centralnej Ewidencji Pojazdów. Jest to rejestr prowadzony przez Ministra Spraw Wewnętrznych na podstawie przepisów ustawy Prawo o ruchu drogowym.</string>
    <string name="about_third_paragraph">Aplikacja korzysta z otwartego API (https://vehicle-history.io).</string>
    <string name="about_fourth_paragraph">Prezentowane dane można wykorzystać tylko na własne ryzyko i na własną odpowiedzialność.</string>
    <string name="about_fifth_paragraph">Wszystkie użyte obrazy i loga są objęte prawami autorskimi ich właścicieli.</string>
    <string name="about_application_version">Wersja aplikacji: </string>
    <string name="about_contact">Kontakt</string>
</resources>
