<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/AboutLabel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"/>

        <TextView style="@style/AboutLabel"
            android:id="@+id/application_version_text_view"
            android:layout_gravity="center_horizontal"/>

        <TextView style="@style/AboutLabel"
            android:text="@string/about_first_paragraph"/>

        <TextView style="@style/AboutLabel"
            android:text="@string/about_second_paragraph"/>

        <TextView style="@style/AboutLabel"
            android:text="@string/about_third_paragraph"/>

        <TextView style="@style/AboutLabel"
            android:text="@string/about_fourth_paragraph"/>

        <TextView style="@style/AboutLabel"
            android:text="@string/about_fifth_paragraph"/>

        <Button android:id="@+id/contact_developer_button"
            style="@style/Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/about_contact"/>

    </LinearLayout>
    
</ScrollView>