<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/car_label"
            style="@style/PrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <LinearLayout style="@style/VehicleInfoSection">

            <TextView
                style="@style/VehicleInfoLabel"
                android:text="@string/producent_label"/>

            <TextView
                style="@style/VehicleInfoValue"
                android:id="@+id/producer"/>

        </LinearLayout>

        <LinearLayout style="@style/VehicleInfoSection">

            <TextView
                style="@style/VehicleInfoLabel"
                android:text="@string/model_label"/>

            <TextView
                style="@style/VehicleInfoValue"
                android:id="@+id/model"/>

        </LinearLayout>

        <LinearLayout style="@style/VehicleInfoSection">

            <TextView
                style="@style/VehicleInfoLabel"
                android:text="@string/year_label"/>

            <TextView
                style="@style/VehicleInfoValue"
                android:id="@+id/year"/>

        </LinearLayout>

        <LinearLayout style="@style/VehicleInfoSection">

            <TextView
                style="@style/VehicleInfoLabel"
                android:text="Numer rejestracyjny"/>

            <TextView
                style="@style/VehicleInfoValue"
                android:id="@+id/reg_number"/>

        </LinearLayout>

        <LinearLayout style="@style/VehicleInfoSection">

            <TextView
                style="@style/VehicleInfoLabel"
                android:text="@string/vin_label"/>

            <TextView
                style="@style/VehicleInfoValue"
                android:id="@+id/vin"/>

        </LinearLayout>

        <LinearLayout style="@style/VehicleInfoSection">

            <TextView
                style="@style/VehicleInfoLabel"
                android:text="@string/first_registration_label"/>

            <TextView
                style="@style/VehicleInfoValue"
                android:id="@+id/first_registration"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>